<?xml version="1.0"?>
<package format="2">
  <name>tfr_visualization</name>
  <version>0.0.0</version>
  <description>Package for storing rviz configurations and utility scripts for visualizing data in rviz and other ros visualization software.</description>

  <maintainer email="collinsconway@gmail.com">Collin Conway</maintainer>
  <maintainer email="adam.krpan@outlook.com">Adam Krpan</maintainer>
  <license>BSD</license>
  <url type="website">http://www.trickfirerobotics.com/</url>
  <author email="collinsconway@gmail.com">Collin Conway</author>
  <author email="adam.krpan@outlook.com">Adam Krpan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rviz</exec_depend>
</package>
