<package format="2">
  <name>xsens_custom_msgs</name>
  <version>2.0.2</version>
  <description>
    This package defines custom Xsens sensor sample format message to be
    used only with the MTdata2 format.
  </description>
  <maintainer email="tfoote@osrfoundation.org">Tully Foote</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/sensor_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>rosjava_messages</build_depend>
  
  <export>
    <architecture_independent/>
  </export>
</package>
